--- a/app/src/main/res/layout/login_dialog.xml
+++ b/app/src/main/res/layout/login_dialog.xml
@@ -29,6 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="dummy"
+            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:drawablePadding="5dp"
             android:hint="@string/signin_hint_user_name"
             android:inputType="text"
             android:paddingStart="15dp"
@@ -48,6 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="dummy"
+            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
+            android:drawablePadding="5dp"
             android:hint="@string/signin_hint_password"
             android:inputType="textPassword"
             android:paddingStart="15dp"
