--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,8 @@
             android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:drawablePadding="5dp"
             android:hint="@string/signin_hint_user_name"
             android:inputType="textPersonName"
             android:paddingStart="15dp"
@@ -63,6 +65,8 @@
             android:id="@+id/loginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
+            android:drawablePadding="5dp"
             android:hint="@string/signin_hint_password"
             android:inputType="textPassword"
             android:paddingStart="15dp"
