--- a/app/src/main/res/layout/switch_language_dialog.xml
+++ b/app/src/main/res/layout/switch_language_dialog.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="start"
-        android:text="I LEARN"
+        android:text="I WANT TO LEARN"
         android:textSize="20sp"
         android:textStyle="bold" />
 
