--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/flatWhiteSmoke"
@@ -244,6 +245,34 @@
                 android:background="@drawable/output_detail_textview"
                 android:focusable="false"
                 android:focusableInTouchMode="false" />
+
+            <TextView
+                android:id="@+id/detail_title_memo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Memo"
+                android:textColor="@color/flatBunker"
+                android:textStyle="bold" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputLayout"
+                android:backgroundTint="@android:color/transparent"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="true">
+
+                <EditText
+                    android:id="@+id/detail_output_memo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Write here"
+                    android:inputType="textCapSentences|textMultiLine"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
