--- a/app/src/main/res/layout/dialog_from_language_drop_down_list.xml
+++ b/app/src/main/res/layout/dialog_from_language_drop_down_list.xml
@@ -8,8 +8,9 @@
         android:id="@+id/dialog_from_language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="30dp"
-        android:textColor="@color/flatLightCoral"
+        android:textColor="@color/flatBunker"
         android:textSize="20sp" />
 </LinearLayout>
