--- a/app/src/main/res/layout/activity_auto_sync_settings.xml
+++ b/app/src/main/res/layout/activity_auto_sync_settings.xml
@@ -9,11 +9,11 @@
     android:paddingEnd="10dp">
 
     <TextView
-        android:id="@+id/setting_general"
+        android:id="@+id/auto_sync_setting_overview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="@string/setting_general"
+        android:text="Overview"
         android:textColor="@color/flatLightCoral"
         android:textSize="17sp" />
 
@@ -29,25 +29,49 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/setting_general_list_item_title"
+                android:id="@+id/setting_title_overview_auto_sync_activate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/setting_title_sync_on_wi_fi_only"
+                android:text="Activate auto sync"
                 android:textColor="@color/flatBunker"
                 android:textSize="17sp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/setting_general_list_item_summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/setting_summary_sync_data_only_when_connected_to_wi_fi" />
         </LinearLayout>
 
         <Switch
             android:id="@+id/setting_general_list_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/auto_sync_setting_layout_overview_interval"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/auto_sync_setting_title_overview_interval"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Auto synchronize every"
+                android:textColor="@color/flatBunker"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/auto_sync_setting_display_day_overview_interval"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="dummy_days" />
+        </LinearLayout>
     </LinearLayout>
 
     <View
